--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -276,7 +276,7 @@
     
     <nav class="main-nav">
         <div class="nav-logo">
-            <a href="index.html#" class="nav-link logo-link">PHỞ GÕ TAROT</a>
+            <a href="index.html#" class="nav-link logo-link">PHỞ GÕ TAROT 1</a>
         </div>
         <div class="nav-links" id="nav-links">
             <a href="index.html" class="nav-link">Trang Chủ</a>
