--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -331,7 +331,7 @@
             <div class="container">
                 <div class="grid-2">
                     <div>
-                        <img src="img-1.jpg" alt="Tarot Reader" class="section-image">
+                        <img src="/img-1.jpg" alt="Tarot Reader" class="section-image">
                     </div>
                     <div class="text-center" style="md:text-align: left;">
                         <h2 class="section-subtitle">Tarot Là Gì?</h2>
@@ -409,7 +409,7 @@
                         <a href="#services" class="btn-primary">Khám Phá Oracle</a>
                     </div>
                     <div>
-                        <img src="img-2.jpg" alt="Oracle Cards" class="section-image">
+                        <img src="/img-2.jpg" alt="Oracle Cards" class="section-image">
                     </div>
                 </div>
             </div>
@@ -496,6 +496,6 @@
                 &copy; 2025 Phở Gõ Tarot. Mọi quyền được bảo lưu.
             </div>
         </footer>
-    <script src="common.js" defer></script>
+    <script src="/common.js" defer></script>
 </body>
 </html>
