--- a/src/pages/zodiac-daily.astro
+++ b/src/pages/zodiac-daily.astro
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -928,7 +928,7 @@
         </footer>
 
     <!-- Giả sử common.js tồn tại ở thư mục gốc -->
-    <script src="common.js" defer></script>
+    <script src="/common.js" defer></script>
     
     <script>
         /* ============================================
