--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
     
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
     <script>
@@ -47,7 +47,7 @@
             width: 100px; 
             height: 100px; 
             border-radius: 50%;
-            background-image: url('planet.png'); 
+            background-image: url('/planet.png'); 
             background-size: cover; 
             background-position: center;
             background-color: transparent; 
@@ -537,7 +537,7 @@
         </footer>
 
     <!-- (QUAN TRỌNG) Tải common.js trước logic của trang -->
-    <script src="common.js" defer></script>
+    <script src="/common.js" defer></script>
 
 
     <!-- SCRIPT LOGIC CỦA TRANG (ĐÃ CHỈNH SỬA) -->
