--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -317,10 +317,10 @@
     <!-- NAV BAR (Giữ nguyên) -->
     <nav class="main-nav">
         <div class="nav-logo">
-            <a href="index.html#" class="nav-link logo-link">PHỞ GÕ TAROT</a>
+            <a href="/" class="nav-link logo-link">PHỞ GÕ TAROT</a>
         </div>
         <div class="nav-links" id="nav-links">
-            <a href="index.html" class="nav-link">Trang Chủ</a>
+            <a href="/" class="nav-link">Trang Chủ</a>
             
             <div class="nav-item nav-dropdown">
                 <div class="nav-link" id="tarot-dropdown-toggle" style="cursor: pointer;">
@@ -330,16 +330,16 @@
                     </svg>
                 </div>
                 <div class="dropdown-submenu">
-                    <a href="tarot.html" class="nav-link submenu-link">Trải bài 3 lá</a> 
-                    <a href="yes-no-reading.html" class="nav-link submenu-link">Yes/No Question</a>
-                    <a href="zodiac-daily.html" class="nav-link submenu-link">Zodiac Tarot</a>
+                    <a href="/tarot" class="nav-link submenu-link">Trải bài 3 lá</a>
+                    <a href="/yes-no-reading" class="nav-link submenu-link">Câu hỏi Yes/No</a>
+                    <a href="/zodiac-daily" class="nav-link submenu-link">Zodiac Tarot</a>
                 </div>
             </div>
-            <a href="index.html#" class="nav-link">Về chúng tôi</a>
-            <a href="index.html#" class="nav-link">Blogs</a>
-            <a href="index.html#" class="nav-link">Đặt lịch</a>
-            <a href="index.html#" class="nav-link">Liên hệ</a>
-            <a href="#" id="history-nav-link" class="nav-link">Lịch sử</a>
+            <a href="/" class="nav-link">Về chúng tôi</a>
+            <a href="/" class="nav-link">Blogs</a>
+            <a href="/" class="nav-link">Đặt lịch</a>
+            <a href="/" class="nav-link">Liên hệ</a>
+            <a href="/" id="history-nav-link" class="nav-link">Lịch sử</a>
         </div>
         <button class="nav-toggle" id="nav-toggle" aria-label="toggle navigation">
             <span class="hamburger"></span>
