--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -443,7 +443,7 @@
 
     <script src="/common.js" defer></script>
 
-    <script>
+    <script is:inline>
         /* ============================================= */
 /* === TAROT.JS (Tarot Game Logic) === */
 /* ============================================= */
