--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -22,7 +22,7 @@
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <style>
+    <style is:inline>
         /* --- CSS CHO LOADER HÀNH TINH 3D (Giữ nguyên) --- */
         .interpretation-loader {
             display: flex;
@@ -541,7 +541,7 @@
 
 
     <!-- SCRIPT LOGIC CỦA TRANG (ĐÃ CHỈNH SỬA) -->
-    <script>
+    <script is:inline>
 /* ============================================= */
 /* === TAROT.JS (Logic cho trang 1/3 lá) === */
 /* ============================================= */
