--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -18,6 +18,7 @@
       gtag('config', 'G-CF1CK7N9BR');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preload" href="/card-back.jpg" as="image">
 
     <style>
         /* --- (MỚI) CSS CHO LOADER HÀNH TINH 3D --- */
@@ -443,7 +444,7 @@
 
     <script src="/common.js" defer></script>
 
-    <script is:inline>
+    <script>
         /* ============================================= */
 /* === TAROT.JS (Tarot Game Logic) === */
 /* ============================================= */
