--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -21,8 +21,9 @@
       gtag('config', 'G-CF1CK7N9BR');
     </script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preload" href="/card-back.jpg" as="image">
 
-    <style is:inline>
+    <style>
         /* --- CSS CHO LOADER HÀNH TINH 3D (Giữ nguyên) --- */
         .interpretation-loader {
             display: flex;
@@ -138,6 +139,8 @@
             opacity: 1;
         }
         /* === (HẾT) CSS CHO NÚT CHỌN === */
+        </style>
+        <style is:inline>
 
         /* === (CHỈNH SỬA) CSS CHO KHU VỰC TRA CỨU BÀI === */
         .card-lookup-container { /* (ĐỔI) ID -> Class */
