--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -322,7 +322,7 @@
         </p>
     </div>
 
-    <div id="drawing-screen" class="screen">
+    <div is:inline id="drawing-screen" class="screen">
         <div id="drawing-question-display" class="question-display-header"></div>
         <h2 class="drawing-subheader">Hãy chọn 3 lá bài</h2>
         
