--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -424,7 +424,7 @@
     </div>
 
     <!-- MÀN HÌNH 3: CHỌN BÀI (ĐÃ CHỈNH SỬA) -->
-    <div id="drawing-screen" class="screen">
+    <div is:inline id="drawing-screen" class="screen">
         <div id="drawing-question-display" class="question-display-header"></div>
         
         <h2 class="drawing-subheader">Hãy chọn 3 lá bài</h2>
@@ -448,7 +448,7 @@
             <button id="get-interpretation-button" class="action-button">Xem ý nghĩa</button>
         </div>
         
-        <div is:inline id="interpretation-results-display"></div>
+        <div id="interpretation-results-display"></div>
         
         <div id="follow-up-question-container">
             <h3>Bạn có câu hỏi nào khác không?</h3>
