--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -423,7 +423,7 @@
     </div>
 
     <!-- MÀN HÌNH 3: CHỌN BÀI (ĐÃ CHỈNH SỬA) -->
-    <div is:inline id="drawing-screen" class="screen">
+    <div id="drawing-screen" class="screen">
         <div id="drawing-question-display" class="question-display-header"></div>
         
         <h2 class="drawing-subheader">Hãy chọn 3 lá bài</h2>
@@ -543,7 +543,7 @@
 
 
     <!-- SCRIPT LOGIC CỦA TRANG (ĐÃ CHỈNH SỬA) -->
-    <script is:inline>
+    <script>
 /* ============================================= */
 /* === TAROT.JS (Logic cho trang 1/3 lá) === */
 /* ============================================= */
