--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preload" href="/card-back.jpg" as="image">
 
-    <style>
+    <style is:inline>
         /* --- (MỚI) CSS CHO LOADER HÀNH TINH 3D --- */
         .interpretation-loader {
             display: flex;
@@ -322,7 +322,7 @@
         </p>
     </div>
 
-    <div is:inline id="drawing-screen" class="screen">
+    <div id="drawing-screen" class="screen">
         <div id="drawing-question-display" class="question-display-header"></div>
         <h2 class="drawing-subheader">Hãy chọn 3 lá bài</h2>
         
