--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,22 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trải Bài Tarot Cùng Phở Gõ Tarot</title>
+
+    <title>Phở Gõ Tarot - Trải Bài Tarot Miễn Phí & Luận Giải Sâu Sắc</title>
+    <meta name="description" content="Khám phá ý nghĩa các lá bài tarot, nhận trải bài 3 lá, Yes/No miễn phí. Phở Gõ Tarot soi sáng con đường của bạn bằng luận giải AI sâu sắc.">
+    <link rel="canonical" href="https://phogotarot.com/">
+
+    <meta property="og:title" content="Phở Gõ Tarot - Trải Bài Tarot Miễn Phí" />
+    <meta property="og:description" content="Khám phá ý nghĩa các lá bài tarot, nhận trải bài 3 lá, Yes/No miễn phí và các bài viết blog chuyên sâu." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://phogotarot.com/" />
+    <meta property="og:image" content="https://phogotarot.com/images/phogotarot-og-image.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
-    <script>
+    <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-CF1CK7N9BR');
     </script>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script type="application/ld+json" is:inline>
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Phở Gõ Tarot",
+      "url": "https://phogotarot.com/",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Phở Gõ Tarot",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://phogotarot.com/images/logo.png" 
+          /* (Bạn cần tạo 1 file logo và đặt vào /public/images/logo.png) */
+        }
+      }
+    }
+    </script>
 
     <style>
         
