--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -3,21 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trải Bài Tarot 3 lá Cùng Phở Gõ Tarot</title>
+
+    <title>Trải Bài 3 Lá - Phân Tích Tình Yêu, Sự Nghiệp | Phở Gõ Tarot</title>
+    <meta name="description" content="Sử dụng trải bài 3 lá (Quá khứ, Hiện tại, Tương lai) để nhận luận giải AI sâu sắc về các câu hỏi tình yêu, sự nghiệp và cuộc sống của bạn.">
+    <link rel="canonical" href="https://phogotarot.com/tarot">
+
+    <meta property="og:title" content="Trải Bài 3 Lá - Phân Tích Tình Yêu, Sự Nghiệp | Phở Gõ Tarot" />
+    <meta property="og:description" content="Nhận luận giải AI sâu sắc cho trải bài 3 lá về tình yêu, sự nghiệp và cuộc sống." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://phogotarot.com/tarot" />
+    <meta property="og:image" content="https://phogotarot.com/images/tarot-og-image.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
+
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
-    <script>
+    <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
       gtag('config', 'G-CF1CK7N9BR');
     </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <script type="application/ld+json" is:inline>
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Trải Bài 3 Lá - Phân Tích Tình Yêu, Sự Nghiệp",
+      "description": "Sử dụng trải bài 3 lá (Quá khứ, Hiện tại, Tương lai) để nhận luận giải AI sâu sắc về các câu hỏi tình yêu, sự nghiệp và cuộc sống của bạn.",
+      "url": "https://phogotarot.com/tarot",
+      "isPartOf": {
+        "@type": "WebSite",
+        "url": "https://phogotarot.com/"
+      }
+    }
+    </script>
     <link rel="preload" href="/card-back.jpg" as="image">
 
     <style is:inline>
