--- a/src/pages/zodiac-daily.astro
+++ b/src/pages/zodiac-daily.astro
@@ -3,21 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lá bài Tarot của bạn hôm nay</title>
-    
+
+    <title>Zodiac Tarot Hàng Ngày - Lá Bài Cung Hoàng Đạo | Phở Gõ Tarot</title>
+    <meta name="description" content="Khám phá lá bài Tarot hàng ngày cho 12 cung hoàng đạo. Nhận thông điệp và lời khuyên từ vũ trụ cho Bạch Dương, Kim Ngưu, Song Tử, v.v.">
+    <link rel="canonical" href="https://phogotarot.com/zodiac-daily">
+
+    <meta property="og:title" content="Zodiac Tarot Hàng Ngày - Lá Bài Cung Hoàng Đạo | Phở Gõ Tarot" />
+    <meta property="og:description" content="Khám phá lá bài Tarot hàng ngày cho 12 cung hoàng đạo." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://phogotarot.com/zodiac-daily" />
+    <meta property="og:image" content="https://phogotarot.com/images/zodiac-og-image.jpg" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"></script>
+    
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CF1CK7N9BR"></script>
-    <script>
+    <script is:inline>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
       gtag('config', 'G-CF1CK7N9BR');
     </script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" xintegrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <script type="application/ld+json" is:inline>
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Zodiac Tarot Hàng Ngày - Lá Bài Cung Hoàng Đạo",
+      "description": "Khám phá lá bài Tarot hàng ngày cho 12 cung hoàng đạo. Nhận thông điệp và lời khuyên từ vũ trụ.",
+      "url": "https://phogotarot.com/zodiac-daily",
+      "isPartOf": {
+        "@type": "WebSite",
+        "url": "https://phogotarot.com/"
+      }
+    }
+    </script>
 
     <style>
         
