--- a/src/pages/yes-no-reading.astro
+++ b/src/pages/yes-no-reading.astro
@@ -549,10 +549,22 @@
                 <div class="footer-column contact">
                     <h3 class="footer-title">Thông tin liên hệ</h3>
                     <ul class="footer-link-list">
-                        <li><i class="fa-solid fa-location-dot"></i><span>Quận Bình Thạnh, Hồ Chí Minh, VN</span></li>
-                        <li><i class="fa-solid fa-phone"></i><a href="tel:0931881420">0352 677 543</a></li>
-                        <li><i class="fa-solid fa-envelope"></i><a href="mailto:tarotmienphi@gmail.com">bebluetotrue@gmail.com</a></li>
-                        <li><i class="fa-solid fa-globe"></i><a href="https://tarotmienphi.com" target="_blank" rel="noopener noreferrer">https://phogotarot.com</a></li>
+                        <li>
+                            <i class="fa-solid fa-location-dot"></i>
+                            <span>Quận Bình Thạnh, Hồ Chí Minh, VN</span>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-phone"></i>
+                            <a href="tel:0352677543">0352 677 543</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-envelope"></i>
+                            <a href="mailto:bebluetotrue@gmail.com">bebluetotrue@gmail.com</a>
+                        </li>
+                        <li>
+                            <i class="fa-solid fa-globe"></i>
+                            <a href="https://phogotarot.com" target="_blank" rel="noopener noreferrer">https://phogotarot.com</a>
+                        </li>
                     </ul>
                 </div>
             </div>
