--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -504,15 +504,15 @@
                         </li>
                         <li>
                             <i class="fa-solid fa-phone"></i>
-                            <a href="tel:0931881420">0352 677 543</a>
+                            <a href="tel:0352677543">0352 677 543</a>
                         </li>
                         <li>
                             <i class="fa-solid fa-envelope"></i>
-                            <a href="mailto:tarotmienphi@gmail.com">bebluetotrue@gmail.com</a>
+                            <a href="mailto:bebluetotrue@gmail.com">bebluetotrue@gmail.com</a>
                         </li>
                         <li>
                             <i class="fa-solid fa-globe"></i>
-                            <a href="https://tarotmienphi.com" target="_blank" rel="noopener noreferrer">https://phogotarot.com</a>
+                            <a href="https://phogotarot.com" target="_blank" rel="noopener noreferrer">https://phogotarot.com</a>
                         </li>
                     </ul>
                 </div>
