--- a/src/pages/tarot.astro
+++ b/src/pages/tarot.astro
@@ -470,7 +470,7 @@
 
     <script src="/common.js" defer></script>
 
-    <script is:inline>
+    <script>
         /* ============================================= */
 /* === TAROT.JS (Tarot Game Logic) === */
 /* ============================================= */
